--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-“Hello, world”
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Let's Dance</title>
+</head>
+<body>
+    <center>
+        <img src="./static/terh.jpg">
+    </center>
+</body>
+</html>
+
